--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
 input[type="text"] {
   width: 96%;
   font-size: 15px;
-  color: #007bff;
+  color: #000;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 8px;
