--- a/src/components/Codes/styles.module.css
+++ b/src/components/Codes/styles.module.css
@@ -80,3 +80,9 @@
   height: 40px;
   font-weight: bold;
 }
+
+@media screen and (max-width: 768px) {
+  #buttonWrapper {
+    width: 100% !important;
+  }
+}
