--- a/src/components/common/Menu/styles.module.css
+++ b/src/components/common/Menu/styles.module.css
@@ -9,8 +9,7 @@
   justify-content: center;
   gap: 60px;
   cursor: pointer;
-  position: absolute;
-  bottom: 0;
+  margin-top: 20px;
 }
 
 .item {
